* fixed #container overflow bug

--- a/app/view/theme/amplo/css/style.less
+++ b/app/view/theme/amplo/css/style.less
@@ -130,7 +130,7 @@ input, select, textarea {
 	box-sizing: border-box;
 	min-height: 100%;
 	width: 100%;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 #maintenance-mode {
